--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.72.3",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-paper": "^5.9.1",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "^3.4.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
