--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
     "redux-form": "^8.3.10",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
