--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ node_modules/
 npm-debug.log
 yarn-error.log
 package-lock.json
-
+.vscode
 # fastlane
 #
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
