--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@react-native-async-storage/async-storage": "^1.19.1",
     "@react-native-community/checkbox": "^0.5.16",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.9.1",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "^3.4.1",
