--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-credit-card-display": "^0.3.6",
     "react-native-date-picker": "^4.2.14",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-modal": "^13.0.1",
