--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "axios": "^1.5.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-web": "^0.17.0",
+    "fbjs": "^2.1.0",
+    "node-fetch": "^3.0.0",
+    "isomorphic-fetch": "^3.0.0",
     "react-native-credit-card-display": "^0.3.6",
     "react-native-date-picker": "^4.2.14",
     "react-native-gesture-handler": "^2.12.1",
@@ -32,6 +36,8 @@
     "react-native-vector-icons": "^10.0.0",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
+    "i18next": "^23.5.1",
+    "intl-pluralrules": "^2.0.1",
     "redux-form": "^8.3.10",
     "redux-thunk": "^2.4.2",
     "styled-components": "^6.0.7"
