--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
+    "fbjs": "^3.0.5",
+    "i18next": "^23.5.1",
+    "intl-pluralrules": "^2.0.1",
+    "isomorphic-fetch": "^3.0.0",
+    "node-fetch": "^3.0.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-web": "^0.17.0",
-    "fbjs": "^2.1.0",
-    "node-fetch": "^3.0.0",
-    "isomorphic-fetch": "^3.0.0",
     "react-native-credit-card-display": "^0.3.6",
     "react-native-date-picker": "^4.2.14",
     "react-native-gesture-handler": "^2.12.1",
@@ -34,6 +35,7 @@
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-web": "^0.17.0",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
     "i18next": "^23.5.1",
