--- a/package.json
+++ b/package.json
@@ -38,8 +38,6 @@
     "react-native-web": "^0.17.0",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
-    "i18next": "^23.5.1",
-    "intl-pluralrules": "^2.0.1",
     "redux-form": "^8.3.10",
     "redux-thunk": "^2.4.2",
     "styled-components": "^6.0.7"
@@ -60,7 +58,7 @@
     "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=16"
