--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "isomorphic-fetch": "^3.0.0",
     "node-fetch": "^3.0.0",
     "react": "18.2.0",
+    "react-i18next": "^13.2.2",
     "react-native": "0.72.3",
     "react-native-credit-card-display": "^0.3.6",
     "react-native-date-picker": "^4.2.14",
@@ -34,6 +35,7 @@
     "react-native-reanimated": "^3.4.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
+    "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "^0.17.0",
     "react-redux": "^8.1.2",
