--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-gesture-handler": "^2.12.1",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.10.1",
+    "react-native-permissions": "^3.9.2",
     "react-native-phone-number-input": "^2.0.0",
     "react-native-reanimated": "^3.4.1",
     "react-native-safe-area-context": "^4.7.1",
