--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "react-native start",
     "test": "jest"
   },
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.1",
     "@react-native-community/checkbox": "^0.5.16",
@@ -17,6 +20,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-native": "^0.72.2",
     "axios": "^1.5.0",
     "fbjs": "^3.0.5",
     "i18next": "^23.5.1",
@@ -55,13 +59,14 @@
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "@types/redux-form": "^8.3.5",
+    "@types/styled-components": "^5.1.27",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^4.8.4"
   },
   "engines": {
     "node": ">=16"
