Added notifee api. Campaign service added. Campaigns image deleted.

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ npm-debug.log
 yarn-error.log
 package-lock.json
 .vscode
+config.ts
 # fastlane
 #
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
