--- a/package.json
+++ b/package.json
@@ -61,13 +61,15 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/redux-form": "^8.3.5",
     "@types/styled-components": "^5.1.27",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "babel-jest": "^29.2.1",
-    "eslint": "^8.19.0",
+    "eslint": "^8.51.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.5"
   },
   "engines": {
     "node": ">=16"
