--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "isomorphic-fetch": "^3.0.0",
     "node-fetch": "^3.0.0",
     "react": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-i18next": "^13.2.2",
     "react-native": "0.72.3",
     "react-native-credit-card-display": "^0.3.6",
@@ -61,15 +62,13 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/redux-form": "^8.3.5",
     "@types/styled-components": "^5.1.27",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
     "babel-jest": "^29.2.1",
     "eslint": "^8.51.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.8.4"
   },
   "engines": {
     "node": ">=16"
