--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/redux-form": "^8.3.5",
     "@types/styled-components": "^5.1.27",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
     "babel-jest": "^29.2.1",
     "eslint": "^8.51.0",
     "jest": "^29.2.1",
