--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "react-native": "0.72.3",
     "react-native-credit-card-display": "^0.3.6",
     "react-native-date-picker": "^4.2.14",
+    "react-native-device-info": "^10.12.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.10.1",
     "react-native-permissions": "^3.9.2",
     "react-native-phone-number-input": "^2.0.0",
+    "react-native-public-ip": "^1.0.2",
     "react-native-reanimated": "^3.4.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
